# fastapi-shell

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
fastapi_shell/: __about__.py  __init__.py  __main__.py
