[build-system]

requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-shell"
description = 'An ipython shell for fastapi which automatically imports code and optionally opens a database connection'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "jpribyl", email = "jpribyl@github.io" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "prompt-toolkit==3.0.30",
  "ipython==8.6.0",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/fastapi-shell#readme"
Issues = "https://github.com/unknown/fastapi-shell/issues"
Source = "https://github.com/unknown/fastapi-shell"

[tool.hatch.version]
path = "fastapi_shell/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=fastapi_shell --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "fastapi_shell/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
